crates/ruff_python_parser/tests/snapshots/invalid_syntax@from_import_empty_names.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/from_import_empty_names.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            9,
        ),
        range: 0..48,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(
                        2,
                    ),
                    range: 0..13,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 5..6,
                            node_index: NodeIndex(
                                1,
                            ),
                        },
                    ),
                    names: [],
                    level: 0,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(
                        5,
                    ),
                    range: 14..30,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 19..20,
                            node_index: NodeIndex(
                                4,
                            ),
                        },
                    ),
                    names: [],
                    level: 0,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(
                        8,
                    ),
                    range: 31..47,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 36..37,
                            node_index: NodeIndex(
                                7,
                            ),
                        },
                    ),
                    names: [],
                    level: 0,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | from x import
  |              ^ Syntax Error: Expected one or more symbol names after import
2 | from x import ()
3 | from x import ,,
  |


  |
1 | from x import
2 | from x import ()
  |                ^ Syntax Error: Expected one or more symbol names after import
3 | from x import ,,
  |


  |
1 | from x import
2 | from x import ()
3 | from x import ,,
  |               ^ Syntax Error: Expected an import name
  |


  |
1 | from x import
2 | from x import ()
3 | from x import ,,
  |                ^ Syntax Error: Expected an import name
  |


  |
1 | from x import
2 | from x import ()
3 | from x import ,,
  |                 ^ Syntax Error: Expected one or more symbol names after import
  |
